蒋base64从sun.misc.BASE64Decoder替换为org.apache.commons.codec.binary.Base64；原因是用sun.misc.BASE64Decoder生成的字符串超过76就会默认换行，会造成不必要的麻烦。